@@ -83,6 +83,7 @@ require( dirname(__FILE__) . '/classes/class.Devices.php' );	    //
 require( dirname(__FILE__) . '/classes/class.Crypto.php' );	    	// Crypto class
 require( dirname(__FILE__) . '/classes/class.Password_check.php' );	// Class for password check
 require( dirname(__FILE__) . '/classes/class.Session_DB.php' );	    // Class for storing sessions to database
+require( dirname(__FILE__) . '/classes/class.LockForUpdate.php' );	    // Class for MySQL row locking
 
 
 
